--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <div class="balance-label expenses"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg><span>הוצאות</span></div>
             </div>
             <div class="controls">
-                <button class="btn-theme" onclick="cycleTheme()" id="themeBtn" title="שנה ערכת נושא"><span id="themeIconContainer"></span></button>
-                <button class="btn-pin" id="pinHeaderBtn" onclick="toggleHeaderPin()" title="הצמד/שחרר כותרת"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 17v5"></path><path d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V17h14v-1.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V6h1a2 2 0 0 0 0-4H8a2 2 0 0 0 0 4h1v4.76Z"></path></svg></button>
-                <button class="btn btn-undo" id="undoBtn" onclick="undoLastAction()" title="בטל פעולה אחרונה" disabled><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 7v6h6"/><path d="M21 17a9 9 0 0 0-9-9 9 9 0 0 0-6 2.3L3 13"/></svg></button>
-                <button class="btn btn-delete-month" id="deleteMonthBtn" title="מחק חודש נוכחי"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 6h18"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/><line x1="10" y1="11" x2="10" y2="17"/><line x1="14" y1="11" x2="14" y2="17"/></svg></button>
+                <button class="control-btn-round btn-theme" onclick="cycleTheme()" id="themeBtn" title="שנה ערכת נושא"><span id="themeIconContainer"></span></button>
+                <button class="control-btn-round btn-pin" id="pinHeaderBtn" onclick="toggleHeaderPin()" title="הצמד/שחרר כותרת"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 17v5"></path><path d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V17h14v-1.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V6h1a2 2 0 0 0 0-4H8a2 2 0 0 0 0 4h1v4.76Z"></path></svg></button>
+                <button class="control-btn-round btn-undo" id="undoBtn" onclick="undoLastAction()" title="בטל פעולה אחרונה" disabled><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 7v6h6"/><path d="M21 17a9 9 0 0 0-9-9 9 9 0 0 0-6 2.3L3 13"/></svg></button>
+                <button class="control-btn-round btn-delete-month" id="deleteMonthBtn" title="מחק חודש נוכחי"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 6h18"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/><line x1="10" y1="11" x2="10" y2="17"/><line x1="14" y1="11" x2="14" y2="17"/></svg></button>
                 
                 <div class="sync-wrapper">
                     <input type="password" id="syncPassword" placeholder="סיסמת סנכרון">
@@ -390,7 +390,6 @@
         </div>
     </div>
 </div>
-
         <div class="modal" id="newMonthModal">
                  <div class="modal-content">
                     <div class="modal-header" id="newMonthModalTitle">יצירת חודש חדש</div>
@@ -399,6 +398,23 @@
                     <button class="modal-btn modal-btn-save" id="copyMonthBtn">העתק תנועות קבועות</button>
                     <button class="modal-btn modal-btn-secondary" id="cleanMonthBtn">צור חודש ריק</button>
                     <button class="modal-btn modal-btn-cancel" id="cancelNewMonthBtn">ביטול</button>
+            </div>
+        </div>
+    </div>
+         <div class="modal" id="editMonthModal">
+               <div class="modal-content">
+                    <div class="modal-header" id="editMonthModalTitle">עריכת נתוני החודש</div>
+                    <p id="editMonthModalText" style="text-align: center; margin-bottom: 24px; color: var(--text-secondary);">בחר את הפעולה הרצויה עבור חודש זה.</p>
+                    <div class="modal-actions" style="flex-direction: column; gap: 16px;">
+                <button class="modal-btn modal-btn-secondary" id="resetMonthBtn">
+                    <span style="font-weight: 700;">אפס נתוני חודש</span>
+                    <small style="font-weight: 400; display: block; opacity: 0.8;">פעולה זו תמחק את כל התנועות בחודש זה.</small>
+                </button>
+                <button class="modal-btn modal-btn-danger" id="deleteMonthPermanentlyBtn">
+                     <span style="font-weight: 700;">מחק חודש לצמיתות</span>
+                    <small style="font-weight: 400; display: block; opacity: 0.8;">שימו לב: לא ניתן לשחזר חודש שנמחק.</small>
+                </button>
+                <button class="modal-btn modal-btn-cancel" id="cancelEditMonthBtn">ביטול</button>
             </div>
         </div>
     </div>
